[package]
name = "report-builder"
version = "0.1.0"
edition = "2021"
authors = ["Justin Sing <justincsing@gmail.com>"]
rust-version = "1.76"
description = "A simple html report builder for Rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/singjc/report-builder.git"
documentation = "https://docs.rs/report-builder"
homepage = "https://github.com/singjc/report-builder.git"

[dependencies]
maud = "0.27.0"
chrono = "0.4.39"
rand = "0.8"
itertools-num = "0.1.3"
plotly = "0.12.1"
